# PlaywrightCapture

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  mypy.yml  release.yml
playwrightcapture/: __init__.py  capture.py  exceptions.py  helpers.py  socks5dnslookup.py
