[project]
name = "PlaywrightCapture"
version = "1.31.6"
description = "A simple library to capture websites using playwright"
authors = [
    {name="Raphaël Vinot", email= "raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9,<4.0"

dynamic = [ "classifiers" ]

dependencies = [
    "playwright (>=1.54.0)",
    "dateparser (>=1.2.2)",
    "beautifulsoup4[charset-normalizer,lxml] (>=4.13.4)",
    "w3lib (>=2.3.1)",
    "tzdata (>=2025.2)",
    "playwright-stealth (>=2)",
    "setuptools (>=80.9.0)",
    "puremagic (>=1.30)",
    "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
    "aiohttp[speedups] (>=3.12.14)",
    "aiohttp-socks (>=0.10.1)",
    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
    "dnspython (>=2.7.0,<3.0.0)",
    "python-socks (>=2.7.1,<3.0.0)"
]

[project.urls]
Repository = "https://github.com/Lookyloo/PlaywrightCapture"
Issues = "https://github.com/Lookyloo/PlaywrightCapture/issues"

[tool.poetry]
classifiers=[
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Topic :: Security',
    'Topic :: Internet',
]


[project.optional-dependencies]
recaptcha = [
    "pydub (>=0.25.1) ; python_version < \"3.10\"",
    "pydub-ng (>=0.2.0) ; python_version >= \"3.10\"",
    "SpeechRecognition (>=3.14.3)"
]

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20250516"
pytest = "^8.4.1"
mypy = "^1.17.0"
types-dateparser = "^1.2.2.20250627"
types-pytz = "^2025.2.0.20250516"


[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
