[project]
name = "PlaywrightCapture"
version = "1.36.4"
description = "A simple library to capture websites using playwright"
authors = [
    {name="Raphaël Vinot", email= "raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dynamic = [ "classifiers" ]

dependencies = [
    "playwright (>=1.58.0)",
    "dateparser (>=1.2.2)",
    "beautifulsoup4[charset-normalizer,lxml] (>=4.14.3)",
    "w3lib (>=2.4.0)",
    "tzdata (>=2025.3)",
    "playwright-stealth (>=2.0.1)",
    "setuptools (>=80.10.2)",
    "puremagic (>=1.30)",
    "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
    "aiohttp[speedups] (>=3.13.3)",
    "aiohttp-socks (>=0.11.0)",
    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
    "dnspython (>=2.7.0,<3.0.0)",
    "python-socks (>=2.7.1,<3.0.0)",
    "rfc3161-client (>=1.0.4,<2.0.0)",
    "orjson (>=3.11.4,<4.0.0)"
]

[project.urls]
Repository = "https://github.com/Lookyloo/PlaywrightCapture"
Issues = "https://github.com/Lookyloo/PlaywrightCapture/issues"

[tool.poetry]
classifiers=[
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Topic :: Security',
    'Topic :: Internet',
]


[project.optional-dependencies]
recaptcha = [
    "pydub-ng (>=0.2.0)",
    "SpeechRecognition (>=3.14.5)"
]

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20250516"
pytest = "^9.0.2"
mypy = "^1.19.1"
types-dateparser = "^1.2.2.20250809"
types-pytz = "^2025.2.0.20251108"


[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
